frontend/app/_components/post.module.scss
.postContainer {
  display: grid;
  grid-template-columns: auto 1fr;
  background-color: var(--color-primary-weaker);
  border-radius: 8px;
  margin-bottom: 12px;
}
.leftContainer {
  padding-top: 12px;
  margin-right: 22px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.rightContainer {
  padding: 12px 0;
  grid-column-start: 2;
  grid-row-start: 1;
  grid-column-end: 4;
  display: flex;
  flex: 1;
  flex-direction: column;
  gap: 22px;
}

.editPost,
.commentsContainer {
  background-color: var(--color-primary-weak);
  border-radius: 14px;
  padding: 12px;
}

.actionsContainer {
  grid-row-start: 2;
  grid-column-start: 3;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.actionsContainer button {
  margin: 6px 6px 6px 0;
}

.voteContainer {
  grid-column-start: 1;
  grid-row-start: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-right: 22px;
}

